# python-crud-fastapi-codex

./: README.md  conftest.py  pyproject.toml
.agents/skills/add-fastapi-resource-layers/: SKILL.md
.agents/skills/add-fastapi-resource-layers/agents/: openai.yaml
.agents/skills/configure-sqlmodel-database/: SKILL.md
.agents/skills/configure-sqlmodel-database/agents/: openai.yaml
.agents/skills/configure-sqlmodel-database/references/: database-workflow.md
.agents/skills/configure-sqlmodel-database/scripts/: add_database.py
.agents/skills/fastapi-add-resource-layers/: SKILL.md
.agents/skills/fastapi-configure-sqlmodel-database/: SKILL.md
.agents/skills/fastapi-scaffold/: SKILL.md
.agents/skills/scaffold-fastapi-api/: SKILL.md
.agents/skills/scaffold-fastapi-api/assets/project-template/: .env.example  .gitignore  README.md  pyproject.toml
.agents/skills/scaffold-fastapi-api/assets/project-template/src/: config.py
.agents/skills/scaffold-fastapi-api/assets/project-template/src/interfaces/: UserCreate.py  UserUpdate.py
.agents/skills/scaffold-fastapi-api/assets/project-template/src/models/: user.py
.agents/skills/scaffold-fastapi-api/assets/project-template/src/package_name/: __init__.py  config.py  main.py
.agents/skills/scaffold-fastapi-api/assets/project-template/src/package_name/api/: router.py
.agents/skills/scaffold-fastapi-api/assets/project-template/tests/: constants.py  test_health.py  utils.py
src/db/migrations/: create_users_table.py
src/db/schema/: users.py
src/interfaces/: UserAuth.py  UserAuthResponse.py  UserPagination.py
(+35 files in other folders)
