[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "{{project_name}}"
version = "0.1.0"
description = "FastAPI REST API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi",
    "pydantic-settings",
    "uvicorn[standard]",
]

[project.optional-dependencies]
test = ["httpx", "pytest"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

